# standard-dataclass-to-config-file

./: .gitignore  Dockerfile.tests.unit  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.tests.unit.txt  requirements.txt
standard_dataclass_to_config_file/: root_config.py
tests/unit/: test_root_config.py
